--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "bootstrap": "^4.0.0-alpha.6",
     "immutability-helper": "^2.3.1",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "reactstrap": "^4.8.0",
     "redux": "^3.7.2"
   },
   "scripts": {
